# network-tools

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini  requirements.txt  start-here.md
.claude/skills/project-setup/: EXAMPLE-USAGE.md  README.md  SKILL.md
data/: .gitkeep
docs/: ARCHITECTURE.md  INDEX.md  NETWORK-TOOLS-DECISIONS-2025-11-29.md  PROCESS-OVERVIEW.md  ai-assisted-agile-process.md  device-discovery-prd.md  network-tools-prd.md  parallel-sprint-development-best-practices.md  quick-reference.md  snipeit-integration-prd.md  sprint-backlog-discovery-v1.md  sprint-backlog-snipeit.md  sprint-plan-discovery-implementation.md
docs/maintenance/: README.md  documentation-cleanup-prompt.md
docs/mcp/: README.md  account-setup-summary.md  how-to-use-prompt.md  mcp-implementation-prompt.md  quick-start-guide.md
organizations/ra-home-31-nt/: README.md
organizations/ra-home-31-nt/devices/: nest-wifi-router.md
organizations/ra-home-31-nt/networks/: main-lan.md
organizations/sc-office/: README.md
organizations/sc-office/devices/: epson-wf7840.md
scripts/: connect-rdp.ps1  create-shortcut.ps1
src/network_tools/: __init__.py  __main__.py  config.py  logging.py
src/network_tools/cli/: __init__.py  main.py
templates/: db-device-template.md  db-network-template.md  decision-log-template.md  device-template.md  organization-template.md  pr-template.md  prd-template.md  retrospective-template.md  sprint-planning-template.md  technical-spec-template.md
tests/: __init__.py  test_config.py  test_logging.py
tests/test_cli/: test_main.py
tests/test_db/: test_connection.py  test_models.py  test_queries.py
tests/test_oui/: __init__.py
tests/test_snipeit/: __init__.py  test_client.py  test_models.py
(+19 files in other folders)
